--- a/Project/EURO_CUP_2024/EURO CUP 2024..ipynb
+++ b/Project/EURO_CUP_2024/EURO CUP 2024..ipynb
@@ -45,27 +45,27 @@
     }
    },
    "source": [
-    "UEFA EURO 2024 play-off draw\n",
+    "# UEFA EURO 2024 play-off draw\n",
     "\n",
-    "Semi-finals – Path C: Georgia (1) vs Luxembourg (4), Greece (2) vs Kazakhstan (3)\n",
+    "- Semi-finals – Path C: Georgia (1) vs Luxembourg (4), Greece (2) vs Kazakhstan (3)\n",
     "\n",
-    "Semi-finals – Path B: Israel (1) vs Iceland (4), Bosnia and Herzegovina (2) vs Ukraine (3)\n",
+    "- Semi-finals – Path B: Israel (1) vs Iceland (4), Bosnia and Herzegovina (2) vs Ukraine (3)\n",
     "\n",
-    "Semi-finals – Path A: Poland (1) vs Estonia (4), Wales (2) vs Finland (3)\n",
+    "- Semi-finals – Path A: Poland (1) vs Estonia (4), Wales (2) vs Finland (3)\n",
     "\n",
     "*************************************************************************************************************************************\n",
     "\n",
-    "Final Path C: Georgia / Luxembourg vs Greece / Kazakhstan \n",
+    "#### Final Path C: Georgia / Luxembourg vs Greece / Kazakhstan \n",
     "\n",
     "I select \"Greece\" from path 'C'\n",
     "\n",
     "*************************************************************************************************************************************\n",
-    "Final Path B: Bosnia and Herzegovina / Ukraine vs Israel / Iceland                  \n",
+    "#### Final Path B: Bosnia and Herzegovina / Ukraine vs Israel / Iceland                  \n",
     "\n",
     "I select \"Iceland\" from path 'B'\n",
     "\n",
     "*************************************************************************************************************************************\n",
-    "Final Path A: Wales / Finland vs Poland / Estonia \n",
+    "#### Final Path A: Wales / Finland vs Poland / Estonia \n",
     "\n",
     "I select \"Poland\" from path 'A'"
    ]
@@ -85,7 +85,7 @@
     }
    },
    "source": [
-    "CREATE TABLE SCHEMA"
+    "### CREATE TABLE SCHEMA"
    ]
   },
   {
@@ -180,7 +180,7 @@
     }
    },
    "source": [
-    "INSERT ALL TEAMS AND THEIR RESPECTED GROUPS IN IT"
+    "### INSERT ALL TEAMS AND THEIR RESPECTED GROUPS IN IT"
    ]
   },
   {
@@ -316,7 +316,7 @@
     }
    },
    "source": [
-    "HERE IS OUR INPUT TABLE OF 24 TEAMS AS PER EURO CUP 2024 FORMAT"
+    "### HERE IS OUR INPUT TABLE OF 24 TEAMS AS PER EURO CUP 2024 FORMAT"
    ]
   },
   {
@@ -519,7 +519,7 @@
     }
    },
    "source": [
-    "STAGE 1 - GROUP STAGE MATCHES (36 MATCHES OF 24 TEAMS. EACH TEAM PLAYED 3 MATCH IN GROUP)"
+    "### STAGE 1 - GROUP STAGE MATCHES (36 MATCHES OF 24 TEAMS. EACH TEAM PLAYED 3 MATCH IN GROUP)"
    ]
   },
   {
@@ -1079,7 +1079,7 @@
     }
    },
    "source": [
-    "CREATING POINTS TABLE FROM ABOVE MATCH RESULTS AND GIVING RANKS TO TEAMS ACCORDING TO THEIR GROUPS"
+    "### CREATING POINTS TABLE FROM ABOVE MATCH RESULTS AND GIVING RANKS TO TEAMS ACCORDING TO THEIR GROUPS"
    ]
   },
   {
@@ -1602,7 +1602,7 @@
     }
    },
    "source": [
-    "STAGE 2 - TOP 16 TEAMS FOR ROUND OF 16"
+    "### STAGE 2 - TOP 16 TEAMS FOR ROUND OF 16"
    ]
   },
   {
@@ -2025,9 +2025,7 @@
     }
    },
    "source": [
-    "TAKING ONLY TEAM NAME,GROUP,RANK FOR EASY UNDERSTANDING OF FURTHER PROCESS\n",
-    "\n",
-    "AND PLACE THEM ACCORDING TO ROUND OF 16 MATCH FIXTURES"
+    "### TAKING ONLY TEAM NAME,GROUP,RANK FOR EASY UNDERSTANDING OF FURTHER PROCESS AND PLACE THEM ACCORDING TO ROUND OF 16 MATCH FIXTURES"
    ]
   },
   {
@@ -2382,7 +2380,7 @@
     }
    },
    "source": [
-    "ROUND OF 16 MATCHES AND THEIR RESULTS (8 MATCHES OF 16 TEAMS)"
+    "### ROUND OF 16 MATCHES AND THEIR RESULTS (8 MATCHES OF 16 TEAMS)"
    ]
   },
   {
@@ -2825,7 +2823,7 @@
     }
    },
    "source": [
-    "STAGE 3 - QUARTER-FINAL MATCHES AND THEIR RESULTS (4 MATCHES OF 8 TEAMS)"
+    "### STAGE 3 - QUARTER-FINAL MATCHES AND THEIR RESULTS (4 MATCHES OF 8 TEAMS)"
    ]
   },
   {
@@ -3269,7 +3267,7 @@
     }
    },
    "source": [
-    "STAGE 4 - SEMI-FIANL MATCHES AND THEIR RESULTS (2 MATCHES OF 4 TEAMS)"
+    "### STAGE 4 - SEMI-FIANL MATCHES AND THEIR RESULTS (2 MATCHES OF 4 TEAMS)"
    ]
   },
   {
@@ -3727,7 +3725,7 @@
     }
    },
    "source": [
-    "STAGE 5 - FINAL MATCH AND ITS RESULT"
+    "### STAGE 5 - FINAL MATCH AND ITS RESULT"
    ]
   },
   {
@@ -4120,10 +4118,10 @@
     }
    },
    "source": [
-    "I JUST COMPLETED THIS TASK WITH THE HELP OF CREATING A SINGLE TABLE. \n",
-    "IT WOULD BE MORE SOPHISTICATED IF WE CREATED MULTIPLE TABLES.\n",
-    "BUT OUR CONDITION IS TO COMPLETE IT IN MINIMUM NUMBER OF TABLES.\n",
-    "THAT'S WHY I CHOOSE THIS METHOD OF MULTIPLE CTE'S INSTEAD OF CREATING MULTIPLE TABLES. "
+    "#####I JUST COMPLETED THIS TASK WITH THE HELP OF CREATING A SINGLE TABLE. \n",
+    "#####IT WOULD BE MORE SOPHISTICATED IF WE CREATED MULTIPLE TABLES.\n",
+    "#####BUT OUR CONDITION IS TO COMPLETE IT IN MINIMUM NUMBER OF TABLES.\n",
+    "#####THAT'S WHY I CHOOSE THIS METHOD OF MULTIPLE CTE'S INSTEAD OF CREATING MULTIPLE TABLES. "
    ]
   },
   {
